added emergency planning

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
             <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
             <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
+            <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
         </ul>
     </nav>
     <footer>
@@ -22,3 +23,6 @@
     </footer>
 </body>
 </html>
+
+
+
