adding o2 saturation blog

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
             <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
             <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
-        </ul>
+            <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
+            <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+        
+		
+		
+		</ul>
     </nav>
     <footer>
         <p>© 2024, 2025 Roy Fine | Diving Into Science</p>
