added work of breathing

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
             <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
             <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
         
 		
 		
