added two more air/WOB

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
             <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
             <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
+            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
             <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
-        
-		
-		
 		</ul>
     </nav>
     <footer>
