--- a/index.html
+++ b/index.html
@@ -5,27 +5,35 @@
     <title>My Diving Blog</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Welcome to My Diving Blog</h1>
-        <p>Exploring the science and safety of scuba diving.</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
-            <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
-            <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
-            <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
-            <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
-            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
-            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
-            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
-		</ul>
-    </nav>
-    <footer>
-        <p>© 2024, 2025 Roy Fine | Diving Into Science</p>
-    </footer>
+
+<header>
+     <h1>Welcome to My Diving Blog</h1>
+     <p>Exploring the science and safety of scuba diving.</p>
+</header>
+
+
+<nav>
+    <ul>
+        <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
+        <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
+        <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
+        <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
+        <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
+        <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+        <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
+        <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
+        <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
+    </ul>
+</nav>
+
+
+<footer>
+     <p>© 2024, 2025 Roy Fine | Diving Into Science</p>
+    PADI Master Scuba Diver | NAUI Deep Diver | Dive Safety Advocate</p>
+</footer>
+
 </body>
 </html>
 
