--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 
 <nav>
-    <ul>
+   <ul style="line-height:1.2">
         <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
+        <li><a href="articles/why_every_diver_needs_a_tuneup.html">Is Your Certification Enough? Why Every Diver Needs a Tune-Up</a></li>
         <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
         <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
         <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
@@ -25,6 +26,8 @@
         <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
         <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
         <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
+<hr style="margin:30px;">
+        <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide</a></li>
     </ul>
 </nav>
 
