added blog entry for nonstandard gear
tidy formatting, reduce font size and line spacing of menu items

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </header>
 
 
-<nav>
-   <ul style="line-height:1.2">
+<nav class="mainIndex">
+   <ul style="line-height:1.0;">
         <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
         <li><a href="articles/why_every_diver_needs_a_tuneup.html">Is Your Certification Enough? Why Every Diver Needs a Tune-Up</a></li>
         <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
@@ -23,6 +23,10 @@
         <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
         <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
         <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+
+        <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard Gear</a></li>
+
+
         <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
         <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
         <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
