--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </ul>
 </nav>
 
-
 <footer>
-     <p>© 2024, 2025 Roy Fine | Diving Into Science</p>
-    PADI Master Scuba Diver | NAUI Deep Diver | Dive Safety Advocate</p>
+    <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
+    <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba Diver(dit) Dive | Safety Advocate</p>
 </footer>
 
 </body>
