--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>My Diving Blog</title>
@@ -8,41 +9,47 @@
 
 <body>
 
-<header>
-     <h1>Welcome to My Diving Blog</h1>
-     <p>Exploring the science and safety of scuba diving.</p>
-</header>
+    <header>
+        <h1>Welcome to My Diving Blog</h1>
+        <p>Exploring the science and safety of scuba diving.</p>
+    </header>
+
+    <nav class="mainIndex">
+        <ul style="line-height:1.0;">
+            <li><a href="articles/decompressionTheoryPioneers.html">Pioneers of Decompression Theory: The Architects Behind Modern Dive Safety</a></li>
+
+            <li><a href="articles/whichDecoModelIsBest.html">Which Decompression Model Is Best</a></li>
+
+            <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
+            <li><a href="articles/why_every_diver_needs_a_tuneup.html">Is Your Certification Enough? Why Every Diver Needs a Tune-Up</a></li>
+            <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
+            <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
+            <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
+            <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
+            <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
+            <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+
+            <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard Gear</a></li>
 
 
-<nav class="mainIndex">
-   <ul style="line-height:1.0;">
-        <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
-        <li><a href="articles/why_every_diver_needs_a_tuneup.html">Is Your Certification Enough? Why Every Diver Needs a Tune-Up</a></li>
-        <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
-        <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
-        <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
-        <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
-        <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
-        <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
+            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
+            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
+            <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a></li>
+            
+            <hr style="margin:30px;">
 
-        <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard Gear</a></li>
+            <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide</a>
+            </li>
+        </ul>
+    </nav>
 
-
-        <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
-        <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
-        <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
-<hr style="margin:30px;">
-        <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide</a></li>
-    </ul>
-</nav>
-
-<footer>
-    <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
-    <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba Diver(dit) Dive | Safety Advocate</p>
-</footer>
+    <footer>
+        <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
+        <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba Diver(dit) Dive
+            | Safety Advocate</p>
+    </footer>
 
 </body>
+
 </html>
-
-
-
