added deep dive into bubble formation theory

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
             <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
             <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a></li>
-            
+            <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html">Bubble Formation - A Theoretical Deep Dive</a></li>
+
             <hr style="margin:30px;">
 
             <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide</a>
