callout underconstruction on scuba study guide

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <hr style="margin:30px;">
 
-            <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide</a>
+            <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide <span style="color:red;font-size:small;">(under construction)</span></a>
             </li>
         </ul>
     </nav>
