--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <hr style="margin:30px;">
 
-            <li><a href="articles/studyGuide/master_scuba_catalog.html">Dive Theory - Master Scuba Diver Study Guide <span style="color:red;font-size:small;">(under construction)</span></a>
+            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master Scuba Diver Study Guide </span><span style="color:red;font-size:small;">(under construction)</span></a>
             </li>
         </ul>
     </nav>
