--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
             <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
             <li><a href="articles/why_every_diver_needs_a_tuneup.html"><span style="color:darkblue;">Is Your Certification Enough? Why Every Diver Needs a Tune-Up  &nbsp; &nbsp; &#x2705;</span></a></li>
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet.html">Catastrophic BC Failure at 110 Feet</a></li>
+        
+            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_1.html">Catastrophic BC Failure at 110 Feet (Part 1)</a></li>
+            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_2.html">Catastrophic BC Failure at 110 Feet (Part 2)</a></li>
+
+
             <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
             <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
             <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
