--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
 
     <nav class="mainIndex">
         <ul style="line-height:1.0;">
-            <li><a href="articles/decompressionTheoryPioneers.html">Pioneers of Decompression Theory: The Architects Behind Modern Dive Safety</a></li>
+            <li><a href="articles/decompressionTheoryPioneers.html">Pioneers of Decompression Theory: The Architects
+                    Behind Modern Dive Safety</a></li>
 
             <li><a href="articles/whichDecoModelIsBest.html">Which Decompression Model Is Best</a></li>
 
             <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
-            <li><a href="articles/why_every_diver_needs_a_tuneup.html"><span style="color:darkblue;">Is Your Certification Enough? Why Every Diver Needs a Tune-Up  &nbsp; &nbsp; &#x2705;</span></a></li>
-        
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_1.html">Catastrophic BC Failure at 110 Feet (Part 1)</a></li>
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_2.html">Catastrophic BC Failure at 110 Feet (Part 2)</a></li>
+            <li><a href="articles/why_every_diver_needs_a_tuneup.html"><span style="color:darkblue;">Is Your
+                        Certification Enough? Why Every Diver Needs a Tune-Up &nbsp; &nbsp; &#x2705;</span></a></li>
+
+            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_1.html">Catastrophic BC Failure at 110 Feet (Part
+                    1)</a></li>
+            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_2.html">Catastrophic BC Failure at 110 Feet (Part
+                    2)</a></li>
 
 
             <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
@@ -35,15 +39,23 @@
 
             <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard Gear</a></li>
 
-            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the Impact of Depth on Breathing Gas Density</a></li>
-            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real? Why You Should Care</a></li>
-            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator: Reducing Work of Breathing</a></li>
-            <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a></li>
+            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the
+                    Impact of Depth on Breathing Gas Density</a></li>
+            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real?
+                    Why You Should Care</a></li>
+            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator:
+                    Reducing Work of Breathing</a></li>
+            <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a>
+            </li>
             <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive &nbsp;&nbsp; &#x2705;</span></a></li>
 
-            <hr style="margin:30px;">
+            <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.htm"">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
 
-            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master Scuba Diver Study Guide </span><span style="color:red;font-size:small;">(under construction)</span></a>
+            <hr style=" margin:30px;">
+
+            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master
+                        Scuba Diver Study Guide </span><span style="color:red;font-size:small;">(under
+                        construction)</span></a>
             </li>
         </ul>
     </nav>
