--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
             <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive &nbsp;&nbsp; &#x2705;</span></a></li>
 
-            <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.htm"">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
+            <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.html">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
 
             <hr style=" margin:30px;">
 
