--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
             <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.html">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
 
+            <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some Science</a></li>
+
             <hr style=" margin:30px;">
 
             <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master
