added dive getaway - Roatan as an option

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
             <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some Science</a></li>
 
+            <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy</a></li>
+
             <hr style=" margin:30px;">
 
             <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master
