adding icons to main index

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                     Reducing Work of Breathing</a></li>
             <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a>
             </li>
-            <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive &nbsp;&nbsp; &#x2705;</span></a></li>
+            <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive &nbsp;🫁&nbsp; &#x2705;</span></a></li>
 
             <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.html">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
 
             <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some Science</a></li>
 
-            <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy</a></li>
+            <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿 &nbsp; 🧳</a></li>
 
             <hr style=" margin:30px;">
 
-            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:darkgray;"> Theory - Master
-                        Scuba Diver Study Guide </span><span style="color:red;font-size:small;">(under
+            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory - Master
+                        Scuba Diver Study Guide </span><span style="color:red;font-size:small;"> &nbsp;&nbsp;&nbsp;(caution-work in progress, under
                         construction)</span></a>
             </li>
         </ul>
