added blog post The 130-Foot Trap, adjusted styles

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
             <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿 &nbsp; 🧳</a></li>
 
+            <li><a href="articles\diveGetAway_quickEasy.html">Recreational Diving at 40 meters &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
+
             <hr style=" margin:30px;">
 
             <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory - Master
