added 130 foot dive note

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿 &nbsp; 🧳</a></li>
 
-            <li><a href="articles\diveGetAway_quickEasy.html">Recreational Diving at 40 meters &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
+            <li><a href="articles\recreationalDivingAt_40_Meters.html">Recreational Diving at 40 meters &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
 
             <hr style=" margin:30px;">
 
