--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>My Diving Blog</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./Resources/favicon_DiveMask.png" type="image/x-icon">
 </head>
 
 <body>
@@ -56,6 +57,8 @@
             <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿 &nbsp; 🧳</a></li>
 
             <li><a href="articles\recreationalDivingAt_40_Meters.html">Recreational Diving at 40 meters &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
+
+            <li><a href="articles\yetAnotherDeepDive_fromCapillariesToCompartments.html">Dive Physiology: From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a></li>
 
             <hr style=" margin:30px;">
 
