--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
             <li><a href="articles\yetAnotherDeepDive_fromCapillariesToCompartments.html">Dive Physiology: From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a></li>
 
+            <li><a href="articles\diveGuideToDiveLeader_withEAP.html">Dive Safety: Building Your Own Emergency Response Plan <img src="./Resources/DAN_LOGO.png"   style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a></li>
+
             <hr style=" margin:30px;">
 
             <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory - Master
