added naui promo, adjusted index

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
             <li><a href="articles\diveGuideToDiveLeader_withEAP.html">Dive Safety: Building Your Own Emergency Response Plan <img src="./Resources/DAN_LOGO.png"   style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a></li>
 
+            <li><a href="articles\NAUIvsPADIvsSDI.html">Dive Theory in Advanced Training <img src="./Resources/NAUI_logo.png"   style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a></li>
+
             <hr style=" margin:30px;">
             
             <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory - Master
