added reliability blog post, some formatting

--- a/index.html
+++ b/index.html
@@ -2,82 +2,113 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>My Diving Blog</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./Resources/favicon_DiveMask.png" type="image/x-icon">
+        <meta charset="UTF-8">
+        <title>My Diving Blog</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="icon" href="./Resources/favicon_DiveMask.png" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <h1>Welcome to My Diving Blog</h1>
-        <p>Exploring the science and safety of scuba diving.</p>
-    </header>
+        <header>
+                <h1>Welcome to My Diving Blog</h1>
+                <p>Exploring the science and safety of scuba diving.</p>
+        </header>
 
-    <nav class="mainIndex">
-        <ul style="line-height:1.0;">
-            <li><a href="articles/decompressionTheoryPioneers.html">Pioneers of Decompression Theory: The Architects
-                    Behind Modern Dive Safety</a></li>
+        <nav class="mainIndex">
+                <ul style="line-height:1.0;">
+                        <li><a href="articles/decompressionTheoryPioneers.html">Pioneers of Decompression Theory: The
+                                        Architects
+                                        Behind Modern Dive Safety</a></li>
 
-            <li><a href="articles/whichDecoModelIsBest.html">Which Decompression Model Is Best</a></li>
+                        <li><a href="articles/whichDecoModelIsBest.html">Which Decompression Model Is Best</a></li>
 
-            <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
-            <li><a href="articles/why_every_diver_needs_a_tuneup.html"><span style="color:darkblue;">Is Your
-                        Certification Enough? Why Every Diver Needs a Tune-Up &nbsp; &nbsp; &#x2705;</span></a></li>
+                        <li><a href="articles/gas-theory.html">Gas Theory and Scuba Diving</a></li>
+                        <li><a href="articles/why_every_diver_needs_a_tuneup.html"><span style="color:darkblue;">Is Your
+                                                Certification Enough? Why Every Diver Needs a Tune-Up &nbsp; &nbsp;
+                                                &#x2705;</span></a></li>
 
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_1.html">Catastrophic BC Failure at 110 Feet (Part
-                    1)</a></li>
-            <li><a href="articles/catastrophic_bc_Failure_at_110_feet_2.html">Catastrophic BC Failure at 110 Feet (Part
-                    2)</a></li>
+                        <li><a href="articles/catastrophic_bc_Failure_at_110_feet_1.html">Catastrophic BC Failure at 110
+                                        Feet (Part
+                                        1)</a></li>
+                        <li><a href="articles/catastrophic_bc_Failure_at_110_feet_2.html">Catastrophic BC Failure at 110
+                                        Feet (Part
+                                        2)</a></li>
 
 
-            <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
-            <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a></li>
-            <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and Training</a></li>
-            <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
-            <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+                        <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
+                        <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a>
+                        </li>
+                        <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and
+                                        Training</a></li>
+                        <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
+                        <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
 
-            <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard Gear</a></li>
+                        <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard
+                                        Gear</a></li>
 
-            <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding the
-                    Impact of Depth on Breathing Gas Density</a></li>
-            <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing (WOB) Real?
-                    Why You Should Care</a></li>
-            <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your Regulator:
-                    Reducing Work of Breathing</a></li>
-            <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and Decompression</a>
-            </li>
-            <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive &nbsp;🫁&nbsp; &#x2705;</span></a></li>
+                        <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding
+                                        the
+                                        Impact of Depth on Breathing Gas Density</a></li>
+                        <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing
+                                        (WOB) Real?
+                                        Why You Should Care</a></li>
+                        <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your
+                                        Regulator:
+                                        Reducing Work of Breathing</a></li>
+                        <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and
+                                        Decompression</a>
+                        </li>
+                        <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span
+                                                style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive
+                                                &nbsp;🫁&nbsp; &#x2705;</span></a></li>
 
-            <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.html">Your Dive Weights Are Your Responsibility-Take Charge</a></li>
+                        <li><a href="articles\yourDiveWeightsAreYourResponsibility_TakeCharge.html">Your Dive Weights
+                                        Are Your Responsibility-Take Charge</a></li>
 
-            <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some Science</a></li>
+                        <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some
+                                        Science</a></li>
 
-            <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿 &nbsp; 🧳</a></li>
+                        <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿
+                                        &nbsp; 🧳</a></li>
 
-            <li><a href="articles\recreationalDivingAt_40_Meters.html">Recreational Diving at 40 meters &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
+                        <li><a href="articles\recreationalDivingAt_40_Meters.html">Recreational Diving at 40 meters
+                                        &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
 
-            <li><a href="articles\yetAnotherDeepDive_fromCapillariesToCompartments.html">Dive Physiology: From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a></li>
+                        <li><a href="articles\yetAnotherDeepDive_fromCapillariesToCompartments.html">Dive Physiology:
+                                        From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a></li>
 
-            <li><a href="articles\diveGuideToDiveLeader_withEAP.html">Dive Safety: Building Your Own Emergency Response Plan <img src="./Resources/DAN_LOGO.png"   style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a></li>
+                        <li><a href="articles\diveGuideToDiveLeader_withEAP.html">Dive Safety: Building Your Own
+                                        Emergency Response Plan <img src="./Resources/DAN_LOGO.png"
+                                                style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a>
+                        </li>
 
-            <li><a href="articles\NAUIvsPADIvsSDI.html">Dive Theory in Advanced Training <img src="./Resources/NAUI_logo.png"   style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a></li>
+                        <li><a href="articles\NAUIvsPADIvsSDI.html">Dive Theory in Advanced Training <img
+                                                src="./Resources/NAUI_logo.png"
+                                                style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a>
+                        </li>
 
-            <hr style=" margin:30px;">
-            
-            <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory - Master
-                        Scuba Diver Study Guide </span><span style="color:red;font-size:small;"> &nbsp;&nbsp;&nbsp;(caution-work in progress, under
-                        construction)</span></a>
-            </li>
-        </ul>
-    </nav>
+                        <li><a href="articles\howReliableIsYourScubaGear.html">&nbsp;How Reliable is Your Scuba
+                                        Gear&nbsp;&nbsp; &#x2705;</a></li>
 
-    <footer>
-        <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
-        <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba Diver(dit) Dive
-            | Safety Advocate</p>
-    </footer>
+
+                        <hr style=" margin:30px;">
+
+                        <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
+                                                - Master
+                                                Scuba Diver Study Guide </span><span style="color:red;font-size:small;">
+                                                &nbsp;&nbsp;&nbsp;(caution-work in progress, under
+                                                construction)</span></a>
+                        </li>
+                </ul>
+        </nav>
+
+        <footer>
+                <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
+                <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba
+                        Diver(dit) Dive
+                        | Safety Advocate</p>
+        </footer>
 
 </body>
 
