--- a/index.html
+++ b/index.html
@@ -36,29 +36,42 @@
                                         2)</a></li>
 
 
-                        <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a></li>
+                        <li><a href="articles/deep_dive_deep_stop_or_not.html">Deep Diving - Deep Stop or Not</a>
+                        </li>
+
                         <li><a href="articles/breathing_easy_older_divers.html">Breathing Easy Hint For Older Divers</a>
                         </li>
+
                         <li><a href="articles/deep_diver_emergency_drills_case_study.html">Emergency Planning and
-                                        Training</a></li>
-                        <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a></li>
-                        <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a></li>
+                                        Training</a>
+                        </li>
+
+                        <li><a href="articles/equalization.html">Equalize Early, Equalize Thoroughly</a>
+                        </li>
+
+                        <li><a href="articles/the_real_reason_nitrox_works.html">The Real Reason Nitrox Works</a>
+                        </li>
 
                         <li><a href="articles/the_hidden_cost_of_nonstandard_gear.html">The Hidden Cost of Nonstandard
-                                        Gear</a></li>
+                                        Gear</a>
+                        </li>
 
                         <li><a href="articles/understanding_the_impact_of_depth_on_breathing_gas_density.html">Understanding
-                                        the
-                                        Impact of Depth on Breathing Gas Density</a></li>
+                                        the Impact of Depth on Breathing Gas Density</a>
+                        </li>
+
                         <li><a href="articles/is_work_of_breathing_WOB_real_and_why_we_care.html">Is Work of Breathing
-                                        (WOB) Real?
-                                        Why You Should Care</a></li>
+                                        (WOB) Real? Why You Should Care</a>
+                        </li>
+
                         <li><a href="articles/understanding_work_of_breathing_for_scuba_diver.html">Field Tuning Your
-                                        Regulator:
-                                        Reducing Work of Breathing</a></li>
+                                        Regulator: Reducing Work of Breathing</a>
+                        </li>
+
                         <li><a href="articles/diveComputersFitnessDecompression.html">Dive Computers, Fitness, and
                                         Decompression</a>
                         </li>
+
                         <li><a href="articles/bubbleFormationAndResistanceDeepDiveTheory.html"><span
                                                 style="color:darkblue;">Bubble Formation - A Theoretical Deep Dive
                                                 &nbsp;🫁&nbsp; &#x2705;</span></a></li>
@@ -67,16 +80,20 @@
                                         Are Your Responsibility-Take Charge</a></li>
 
                         <li><a href="articles\surfaceOxygenDCS_and_SomeScience.html">Surface Oxygen DCS and Some
-                                        Science</a></li>
+                                        Science</a>
+                        </li>
 
                         <li><a href="articles\diveGetAway_quickEasy.html">Dive Getaways - Close and Easy &nbsp;&nbsp;🤿
-                                        &nbsp; 🧳</a></li>
+                                        &nbsp; 🧳</a>
+                        </li>
 
                         <li><a href="articles\recreationalDivingAt_40_Meters.html">Recreational Diving at 40 meters
-                                        &nbsp;&nbsp;☠️ &nbsp; ⚠️</a></li>
+                                        &nbsp;&nbsp;☠️ &nbsp; ⚠️</a>
+                        </li>
 
                         <li><a href="articles\yetAnotherDeepDive_fromCapillariesToCompartments.html">Dive Physiology:
-                                        From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a></li>
+                                        From Capillaries to Compartments &nbsp;&nbsp;🪢-🔳</a>
+                        </li>
 
                         <li><a href="articles\diveGuideToDiveLeader_withEAP.html">Dive Safety: Building Your Own
                                         Emergency Response Plan <img src="./Resources/DAN_LOGO.png"
@@ -88,15 +105,14 @@
                                                 style="width:auto; height:1.2em; vertical-align:middle; margin-right:8px;"></a>
                         </li>
 
-                        <li><a href="articles\howReliableIsYourScubaGear.html">&nbsp;How Reliable is Your Scuba
-                                        Gear&nbsp;&nbsp; &#x2705;</a></li>
-
+                        <li><a href="articles\howReliableIsYourScubaGear.html">&nbsp;How Reliable is Your Scuba Gear</a>
+                        </li>
 
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
-                                                - Master
-                                                Scuba Diver Study Guide </span><span style="color:red;font-size:small;">
+                                                - Master Scuba Diver Study Guide </span><span
+                                                style="color:red;font-size:small;">
                                                 &nbsp;&nbsp;&nbsp;(caution-work in progress, under
                                                 construction)</span></a>
                         </li>
@@ -106,8 +122,7 @@
         <footer>
                 <p style="font-size:small;">© 2024, 2025 Roy Fine | Diving Into Science</p>
                 <p style="font-size:x-small;"> PADI Rescue Diver <br> NAUI Deep Diver (dit) | NAUI Master Scuba
-                        Diver(dit) Dive
-                        | Safety Advocate</p>
+                        Diver(dit) Dive Safety Advocate</p>
         </footer>
 
 </body>
