added partial blending bonus question, started more bubbles post

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                         <li><a href="articles\howReliableIsYourScubaGear.html">&nbsp;How Reliable is Your Scuba Gear</a>
                         </li>
 
+                        <li><a href="articles\moreBubbles_and_m-values.html">&nbsp;More on Bubbles and m_values</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
