added worked example of partial pressure blending

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                         <li><a href="articles\moreBubbles_and_m-values.html">&nbsp;More on Bubbles and m_values</a>
                         </li>
 
+                        <li><a href="articles\theMathBehindPartialPressureBlending.html">&nbsp;The Maths Behind Partial Pressure Blending</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
