being a good dive buddy

--- a/index.html
+++ b/index.html
@@ -111,8 +111,18 @@
                         <li><a href="articles\moreBubbles_and_m-values.html">&nbsp;More on Bubbles and m_values</a>
                         </li>
 
-                        <li><a href="articles\theMathBehindPartialPressureBlending.html">&nbsp;The Maths Behind Partial Pressure Blending</a>
+                        <li><a href="articles\areYou_a_goodDiveBuddy.html">&nbsp;Are You A Good Dive Buddy</a>
                         </li>
+
+                        <li><a href="articles\theMathBehindPartialPressureBlending.html">&nbsp;The Maths Behind Partial
+                                        Pressure Blending</a>
+                        </li>
+
+
+                        Are You A Good Dive Buddy
+
+
+
 
                         <hr style=" margin:30px;">
 
