adjusted links, added torr article

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                         </li>
 
 
-                        Are You A Good Dive Buddy
+                        <li><a href="articles\torrecelliAtmosphericPressure.html">&nbsp;Torricelli, Torr, and Atmospheric Pressure</a>
+                        </li>
 
 
 
