added partial pressure details, added math behind partial pressure blending

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                         <li><a href="articles\torrecelliAtmosphericPressure.html">&nbsp;Torricelli, Torr, and Atmospheric Pressure</a>
                         </li>
 
-
-
+                        <li><a href="articles\gasLaws_namesVersusApplication.html">&nbsp;A Forcus on Understanding Gas Theory</a>
+                        </li>
 
                         <hr style=" margin:30px;">
 
