added fitness and strength notes

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                         <li><a href="articles\gasLaws_namesVersusApplication.html">&nbsp;A Forcus on Understanding Gas Theory</a>
                         </li>
 
+                        <li><a href="articles\stayingFitToDiveSafe.html">&nbsp;Dive Safety and Fitness - The Unspoken Advise</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
