adding bayes and base rate fallacy and anchor bias

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                         <li><a href="articles\stayingFitToDiveSafe.html">&nbsp;Dive Safety and Fitness - The Unspoken Advise</a>
                         </li>
 
+                        <li><a href="articles\howHumansReasonUnderUncertainty.html">&nbsp;How Humans Reason Under Uncertainty</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
