another blog posting - revisiting an old issue

--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
                                         Pressure Blending</a>
                         </li>
 
-
                         <li><a href="articles\torrecelliAtmosphericPressure.html">&nbsp;Torricelli, Torr, and Atmospheric Pressure</a>
                         </li>
 
@@ -129,6 +128,9 @@
                         </li>
 
                         <li><a href="articles\howHumansReasonUnderUncertainty.html">&nbsp;How Humans Reason Under Uncertainty</a>
+                        </li>
+
+                        <li><a href="articles\theElusiveDiveMentor.html">&nbsp;Still Looking for that Enlightened Dive Instructor/Mentor</a>
                         </li>
 
                         <hr style=" margin:30px;">
