update index, enhancements to buddy dive + search page.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                         <li><a href="articles\theElusiveDiveMentor.html">&nbsp;Still Looking for that Enlightened Dive Instructor/Mentor</a>
                         </li>
 
+                        <li><a href="articles\lowVisSearchWithBuddyLine.html">&nbsp;Searching in Low Visibility - the Buddy Line</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
