--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                         <li><a href="articles\theElusiveDiveMentor.html">&nbsp;Still Looking for that Enlightened Dive Instructor/Mentor</a>
                         </li>
 
+                        <li><a href="articles\trainingModule_buddyLine.html">&nbsp;Training Module: Buddy Diving with Line in Low Visibility Environments</a>
+                        </li>
+
                         <li><a href="articles\lowVisSearchWithBuddyLine.html">&nbsp;Searching in Low Visibility - the Buddy Line</a>
                         </li>
 
