--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                         <li><a href="articles\lowVisSearchWithBuddyLine.html">&nbsp;Searching in Low Visibility - the Buddy Line</a>
                         </li>
 
+                        <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver Specialty only for the Deep Diver</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
