testing form for dive profile

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                         <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver Specialty only for the Deep Diver</a>
                         </li>
 
+                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;dive profile testing</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
