adding selector for tank size

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver Specialty only for the Deep Diver</a>
                         </li>
 
-                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;dive profile testing</a>
+                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;Dive Plan Visualizer (prototype)  &nbsp; ⚠️</a>
                         </li>
 
                         <hr style=" margin:30px;">
