formatting chart label ledgend

--- a/index.html
+++ b/index.html
@@ -118,31 +118,40 @@
                                         Pressure Blending</a>
                         </li>
 
-                        <li><a href="articles\torrecelliAtmosphericPressure.html">&nbsp;Torricelli, Torr, and Atmospheric Pressure</a>
+                        <li><a href="articles\torrecelliAtmosphericPressure.html">&nbsp;Torricelli, Torr, and
+                                        Atmospheric Pressure</a>
                         </li>
 
-                        <li><a href="articles\gasLaws_namesVersusApplication.html">&nbsp;A Forcus on Understanding Gas Theory</a>
+                        <li><a href="articles\gasLaws_namesVersusApplication.html">&nbsp;A Forcus on Understanding Gas
+                                        Theory</a>
                         </li>
 
-                        <li><a href="articles\stayingFitToDiveSafe.html">&nbsp;Dive Safety and Fitness - The Unspoken Advise</a>
+                        <li><a href="articles\stayingFitToDiveSafe.html">&nbsp;Dive Safety and Fitness - The Unspoken
+                                        Advise</a>
                         </li>
 
-                        <li><a href="articles\howHumansReasonUnderUncertainty.html">&nbsp;How Humans Reason Under Uncertainty</a>
+                        <li><a href="articles\howHumansReasonUnderUncertainty.html">&nbsp;How Humans Reason Under
+                                        Uncertainty</a>
                         </li>
 
-                        <li><a href="articles\theElusiveDiveMentor.html">&nbsp;Still Looking for that Enlightened Dive Instructor/Mentor</a>
+                        <li><a href="articles\theElusiveDiveMentor.html">&nbsp;Still Looking for that Enlightened Dive
+                                        Instructor/Mentor</a>
                         </li>
 
-                        <li><a href="articles\trainingModule_buddyLine.html">&nbsp;Training Module: Buddy Diving with Line in Low Visibility Environments</a>
+                        <li><a href="articles\trainingModule_buddyLine.html">&nbsp;Training Module: Buddy Diving with
+                                        Line in Low Visibility Environments</a>
                         </li>
 
-                        <li><a href="articles\lowVisSearchWithBuddyLine.html">&nbsp;Searching in Low Visibility - the Buddy Line</a>
+                        <li><a href="articles\lowVisSearchWithBuddyLine.html">&nbsp;Searching in Low Visibility - the
+                                        Buddy Line</a>
                         </li>
 
-                        <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver Specialty only for the Deep Diver</a>
+                        <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver
+                                        Specialty only for the Deep Diver</a>
                         </li>
 
-                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;Dive Plan Visualizer (prototype)  &nbsp; ⚠️</a>
+                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;Dive Plan Visualizer
+                                        (prototype) &nbsp; ⚠️</a>
                         </li>
 
                         <hr style=" margin:30px;">
