cleanup dive planner, added rescue diver note

--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                                         Specialty only for the Deep Diver</a>
                         </li>
 
-                        <li><a href="articles\diveProfileGenerator-simplified.html">&nbsp;Dive Plan Visualizer
-                                        (prototype) &nbsp; ⚠️</a>
+                        <li><a href="articles\diveProfileGenerator.html">&nbsp;Dive Plan Visualizer</a>
+                        </li>
+
+                        <li><a href="articles\agencyRescueDiver.html">&nbsp;Agency Rescue Diver</a>
                         </li>
 
                         <hr style=" margin:30px;">
