First 40 meter dive, formatting with styles, adjusting content

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                         <li><a href="articles\agencyRescueDiver.html">&nbsp;Agency Rescue Diver</a>
                         </li>
 
+                        <li><a href="articles\diversFirst_130ft_diveWarning.html">&nbsp;A Diver's First 40 Meter Dive</a>
+                        </li>
+
                         <hr style=" margin:30px;">
 
                         <li><a href="articles/studyGuide/master_scuba_catalog.html"> <span style="color:green;"> Theory
