adding short SI detail deep look

--- a/index.html
+++ b/index.html
@@ -207,11 +207,13 @@
                                                 <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver 
                                                                 Specialty only for the Deep Diver</a>
                                                 </li>
-
                                                 <li><a href="articles\agencyRescueDiver.html">&nbsp;Agency Rescue  Diver</a>
                                                 </li>
                                                 <li><a href="articles\diversFirst_130ft_diveWarning.html">&nbsp;A
                                                                 Diver's First 40 Meter Dive</a>
+                                                </li>
+                                                <li><a href="articles\NAUI_surfaceIntervalSafety.html">&nbsp;A
+                                                                SUrface Intervals and Safety Stops - Revisiting an old topic</a>
                                                 </li>
                                         </div>
 
