--- a/index.html
+++ b/index.html
@@ -212,8 +212,11 @@
                                                 <li><a href="articles\diversFirst_130ft_diveWarning.html">&nbsp;A
                                                                 Diver's First 40 Meter Dive</a>
                                                 </li>
-                                                <li><a href="articles\NAUI_surfaceIntervalSafety.html">&nbsp;A
-                                                                SUrface Intervals and Safety Stops - Revisiting an old topic</a>
+                                                <li><a href="articles\NAUI_surfaceIntervalSafety.html">&nbsp;
+                                                                Surface Intervals and Safety Stops - Revisiting an old topic</a>
+                                                </li>
+                                                <li><a href="articles\repetetitiveDivePlanner.html">&nbsp;
+                                                                Yet Another Dive Tool, The NAUI Repetitive Dive Planner - Table Driven</a>
                                                 </li>
                                         </div>
 
