--- a/index.html
+++ b/index.html
@@ -204,16 +204,19 @@
                                         <!-- beginning of a JUL 25 monthy post set -->
                                         <button class="accordion">JUL 2025</button>
                                         <div class="panel">
-                                                <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is the Deep Diver 
+                                                <li><a href="articles\deepDiveTraining_forTheShallowDiver.html">&nbsp;Is
+                                                                the Deep Diver
                                                                 Specialty only for the Deep Diver</a>
                                                 </li>
-                                                <li><a href="articles\agencyRescueDiver.html">&nbsp;Agency Rescue  Diver</a>
+                                                <li><a href="articles\agencyRescueDiver.html">&nbsp;Agency Rescue
+                                                                Diver</a>
                                                 </li>
                                                 <li><a href="articles\diversFirst_130ft_diveWarning.html">&nbsp;A
                                                                 Diver's First 40 Meter Dive</a>
                                                 </li>
-                                                <li><a href="articles\NAUI_surfaceIntervalSafety.html">&nbsp;A
-                                                                SUrface Intervals and Safety Stops - Revisiting an old topic</a>
+                                                <li><a href="articles\NAUI_surfaceIntervalSafety.html">&nbsp;
+                                                                Surface Intervals and Safety Stops - Revisiting an old
+                                                                topic</a>
                                                 </li>
                                         </div>
 
