--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                                                 <li><a href="articles\repetetitiveDivePlanner.html">&nbsp;
                                                                 Yet Another Dive Tool, The NAUI Repetitive Dive Planner - Table Driven</a>
                                                 </li>
+                                                <li><a href="articles\onTheEdgeOfKnowing.html">&nbsp;
+                                                                On The Edge of Knowing</a>
+                                                </li>
                                         </div>
 
 
