adding diver readiness - and cleaning up on the edge of knowing...

--- a/index.html
+++ b/index.html
@@ -220,11 +220,19 @@
                                                 <li><a href="articles\repetetitiveDivePlanner.html">&nbsp;
                                                                 Yet Another Dive Tool, The NAUI Repetitive Dive Planner - Table Driven</a>
                                                 </li>
+                                        </div>
+
+                                        <!-- beginning of a AUG 25 monthy post set -->
+                                        <button class="accordion">AUG 2025</button>
+                                        <div class="panel">
                                                 <li><a href="articles\onTheEdgeOfKnowing.html">&nbsp;
                                                                 On The Edge of Knowing</a>
                                                 </li>
+                                                
+                                                <li><a href="articles\diverReadiness.html">&nbsp;
+                                                                Diver Readiness - Why Periodic Medical Checkups Matter</a>
+                                                </li>
                                         </div>
-
 
 
                                         <hr style=" margin:30px;">
