adding dive computer & table statistical awareness

--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
                                                 <li><a href="articles\diverReadiness.html">&nbsp;
                                                                 Diver Readiness - Why Periodic Medical Checkups Matter</a>
                                                 </li>
+                                                
+                                                <li><a href="articles\diverReadiness.html">&nbsp;
+                                                                Dive Tables and Dive Computers - they don't know you</a>
+                                                </li>
                                         </div>
 
 
