--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
                                                 <li><a href="articles\diverReadiness.html">&nbsp;
                                                                 Dive Tables and Dive Computers - they don't know you</a>
                                                 </li>
+
+                                                <li><a href="articles\ODIGTMLDivePlanningGuides.html">&nbsp;
+                                                                ODIGTML Dive Planning Guides</a>
+                                                </li>
+
                                         </div>
 
 
